CallerTypeAPI
