# controllers/Comments.js
@@ -17,3 +17,7 @@ module.exports.postVote = function postVote (req, res, next) {
 module.exports.searchComment = function searchComment (req, res, next) {
   Comments.searchComment(req.swagger.params, res, next);
 };
+
+module.exports.getAllCallerType = function getAllCallerType (req, res, next) {
+  Comments.getAllCallerType(req.swagger.params, res, next);
+};
